--- a/Proyecto Movil PTC/css/Dashboard.css
+++ b/Proyecto Movil PTC/css/Dashboard.css
@@ -6,7 +6,6 @@
 
 body {
   font-family: Arial, sans-serif;
-   padding-bottom: 80px; /* espacio para el menú inferior */
 }
 
 .nav-container {
@@ -16,7 +15,7 @@ body {
   padding-top: 1rem;
   padding-bottom: 1rem;
   position: relative; /* <- Importante para el menú desplegable */
-  background-color: #4CAF50;
+ background: linear-gradient(135deg, #386c3f 30%, #0c4805 70%);
 }
 
 .navbar-top {
@@ -24,7 +23,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.75rem 1rem;
-  background-color: #4CAF50; /* tu fondo verde */
+ background: linear-gradient(135deg, #386c3f 30%, #0c4805 70%);
 }
 
 .logo {
@@ -302,108 +301,4 @@ h2 {
 .mf-trip-body { padding:1rem; }
 .mf-trip-hint { font-size:.9rem; color:#666; margin:.25rem 0 0; min-height:1.2em; }
 .mf-trip-footer { padding: .75rem 1rem 1rem; background:#fff; }
-.map-section {
-      padding: 20px;
-    }
-
-    .map-card {
-      background: rgb(247, 252, 249);
-      border-radius: 20px;
-      box-shadow: 0px 5px 15px rgba(0,0,0,0.1);
-      padding: 15px;
-      text-align: center;
-      max-width: 400px;
-      margin: auto;
-      animation: fadeInUp 0.8s ease;
-    }
-
-    .map-card h2 {
-      font-size: 1.3rem;
-      color: #333;
-      margin-bottom: 10px;
-    }
-
-    .map-container {
-      position: relative;
-      overflow: hidden;
-      border-radius: 15px;
-      height: 250px;
-    }
-
-    .map-container iframe {
-      border: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    .btn-directions {
-      display: inline-block;
-      margin-top: 12px;
-      padding: 10px 18px;
-      background: #0d7004;
-      color: white;
-      border-radius: 30px;
-      text-decoration: none;
-      font-size: 0.9rem;
-      transition: 0.3s;
-    }
-
-    .btn-directions:hover {
-      background: #36a7a7;
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Solo para móvil */
-    @media (min-width: 768px) {
-      .map-card {
-        display: none;
-      }
-    }
-
-.link-info {
-  display: inline-block;
-  margin-bottom: 10px;
-  font-size: 0.9rem;
-  text-decoration: underline;
-}
-
-/* Reseñas */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  left: 0; top: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.6);
-  justify-content: center;
-  align-items: center;
-}
-.modal-content {
-  background: #fff;
-  padding: 20px;
-  border-radius: 15px;
-  width: 90%;
-  max-width: 400px;
-  max-height: 80vh;
-  overflow-y: auto;
-}
-.close {
-  float: right;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-#reviews-list {
-  list-style: none;
-  padding: 0;
-}
-#reviews-list li {
-  padding: 8px;
-  border-bottom: 1px solid #ddd;
-  font-size: 0.9rem;
-}
 
