--- a/Proyecto Movil PTC/css/MyPerfil.css
+++ b/Proyecto Movil PTC/css/MyPerfil.css
@@ -12,7 +12,7 @@ body {
   padding-top: 1rem;
   padding-bottom: 1rem;
   position: relative; /* <- Importante para el menú desplegable */
-  background-color: #4CAF50;
+ background: linear-gradient(135deg, #386c3f 30%, #0c4805 70%);
 }
 
 .logo {
@@ -93,10 +93,19 @@ body {
 
 
 .profile-container {
-  max-width: 600px;
-  margin: auto;
+ background: linear-gradient(135deg, #5b9262 30%, #0c4805 70%);
+  color: white;
+  border-radius: 1rem;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  margin-top: 2rem;
+  text-align: center;
   position: relative;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 .close-form {
   position: absolute;
@@ -110,8 +119,10 @@ body {
 
 .profile-header {
   text-align: center;
-  background-color: #ccc;
+  background: rgba(255, 255, 255, 0.1);
   padding: 4rem 1rem 2rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom-left-radius: 50% 10%;
   border-bottom-right-radius: 50% 10%;
   position: relative;
@@ -150,15 +161,46 @@ body {
 }
 
 .card {
-  background-color: #bbb;
-  padding: 1rem;
-  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 1.5rem;
+  border-radius: 0.75rem;
+  text-align: left;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: white;
+  transition: transform 0.2s ease, background 0.2s ease;
+  cursor: pointer;
 }
 
+.card:hover {
+  transform: translateY(-5px);
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.card strong {
+  font-weight: 500;
+}
+
+.card span {
+  font-weight: 300;
+  opacity: 0.7;
+}
+
+/* Botón para cerrar el perfil */
+.close-form {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: white;
+}
+.name,
+.contact {
+  color: white;
+}
 /* MODAL */
 .modal-overlay {
   position: fixed;
